Fixed header aligment issues on small screens.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@ html{
 }
 body {
     margin: 0;
-    padding: 104px 0 0 0;
+    padding: 120px 0 0 0;
     background: white;
     min-height: 100vh;
     position: relative;
@@ -17,7 +17,7 @@ html, body {
 }
 
 #root {
-    padding-bottom: 305px;
+    padding-bottom: 380px;
 }
 
 ul {
