--- a/client/src/Components/Landing/Landing.module.css
+++ b/client/src/Components/Landing/Landing.module.css
@@ -16,3 +16,10 @@
         display: none;
     }
 }
+
+@media screen and (max-height: 641px) {
+    .mainContainer {
+        margin: 0 auto;
+        min-height: 300px;
+    }
+}
